k8s/istio/charts/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: wps
  labels:
    release: istiod
spec:
  ports:
    - port: 15010
      name: grpc
    - port: 15013
      name: h2-grpc
  selector:
    app: istiod

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
  namespace: wps
  labels:
    app: istiod
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: istiod
  template:
    metadata:
      labels:
        app: istiod
        istiod: wps
    spec:
      containers:
        - name: istiod
          # Not valid on dockerhub: will be replaced with localhost
          image: pilot-discovery:latest
          imagePullPolicy: Always
          args:
            - "discovery"
            - "--meshConfig"
            - "/var/lib/istio/mesh/mesh.yaml"
            - "--registries"
            - "Mock"
          ports:
            - containerPort: 15010
              name: grpc
            - containerPort: 8080
              name: http
            - containerPort: 15013
              name: tls-grpc
          resources:
            requests:
              cpu: 100m
              memory: 1024Mi
          volumeMounts:
            - name: istiod
              mountPath: /var/lib/istio/config
              readOnly: true
            - name: mesh
              mountPath: /var/lib/istio/mesh
              readOnly: true
            - mountPath: /var/run/secrets/istio
              name: istiod-ca-cert
            # Certs will be populated by sidecar !
            - name: istio-envoy
              mountPath: /etc/istio/proxy
            - name: istio-token
              mountPath: /var/run/secrets/tokens
              readOnly: true
            - name: podinfo
              mountPath: /etc/istio/pod

        # Co-located istio Gateway
        - name: istio-proxy
          image: costinm/proxyv2:latest
          args:
            - "proxy"
            - "router"
            #            - "--proxyLogLevel"
            #            - "trace"
            - "--serviceCluster"
            - "istiod"
          ports:
            # Creates on each host a port forwarder:
            # -A CNI-DN-78555e74edb8054e88910 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 10.48.0.156:5000
            - containerPort: 15012
              name: docker
              protocol: TCP
          volumeMounts:
            - mountPath: /var/run/secrets/istio
              name: istiod-ca-cert
            - name: istio-envoy
              mountPath: /etc/istio/proxy
            - name: istio-token
              mountPath: /var/run/secrets/tokens
              readOnly: true
            # Not creating those directories disables Secret watching
            #            - name: ingressgatewaysdsudspath
            #              mountPath: /var/run/ingress_gateway
            - name: podinfo
              mountPath: /etc/istio/pod

      securityContext:
        runAsUser: 0
        runAsGroup: 5228
      volumes:
        - emptyDir:
            medium: Memory
          name: local-certs

        - name: istiod
          configMap:
            name: istiod
            optional: true
        - name: mesh
          configMap:
            name: istiod-mesh
            optional: true

        - name: istiod-ca-cert
          configMap:
            name: istio-ca-root-cert
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
        - name: istio-envoy
          emptyDir: {}
        - name: istio-token
          projected:
            sources:
              - serviceAccountToken:
                  path: istio-token
                  expirationSeconds: 43200
                  audience: istio-ca
